--- a/Receipts/package.json
+++ b/Receipts/package.json
@@ -28,6 +28,8 @@
     "test": ""
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0"
   }
 }
