--- a/Receipts/package.json
+++ b/Receipts/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "xhr2": "^0.2.1"
   }
 }
