--- a/Receipts/package.json
+++ b/Receipts/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "FormData": "^0.10.1",
     "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1",
     "xhr2": "^0.2.1"
