--- a/Tesseract-ImageProcess/package.json
+++ b/Tesseract-ImageProcess/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yongye Tan",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "helmet": "^7.1.0",
+    "logger": "^0.0.1",
+    "morgan": "^1.10.0"
+  }
 }
