--- a/Receipts/package.json
+++ b/Receipts/package.json
@@ -28,6 +28,7 @@
     "test": ""
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "FormData": "^0.10.1",
