--- a/ChatGPT/package.json
+++ b/ChatGPT/package.json
@@ -10,6 +10,8 @@
   "author": "Yongye",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
