--- a/ChatGPT/package.json
+++ b/ChatGPT/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "main": "chatgpt.js",
   "scripts": {
+    "start": "node chatgpt.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yongye",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
