--- a/Tesseract-ImageProcess/package.json
+++ b/Tesseract-ImageProcess/package.json
@@ -17,6 +17,8 @@
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
     "logger": "^0.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.6"
   }
 }
