--- a/ChatGPT/package.json
+++ b/ChatGPT/package.json
@@ -6,7 +6,8 @@
   "main": "chatgpt.js",
   "scripts": {
     "start": "node chatgpt.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker": "pm2-runtime chatgpt.js --name GPT -i 5"
   },
   "author": "Yongye",
   "license": "ISC",
