--- a/Receipts/package.json
+++ b/Receipts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "a",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,15 +17,11 @@
   },
   "bugs": "",
   "keywords": [],
-  "author": {
-    "name": "",
-    "email": "",
-    "url": ""
-  },
   "contributors": [],
   "scripts": {
     "dev": "",
-    "test": ""
+    "test": "",
+    "docker": "pm2-runtime start index.js --name Receipts -i 5"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
