--- a/Tesseract-ImageProcess/package.json
+++ b/Tesseract-ImageProcess/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker": "pm2-runtime start server/index.js --name tesseract -i 5"
   },
   "author": "Yongye Tan",
   "license": "ISC",
