--- a/Tesseract-ImageProcess/package.json
+++ b/Tesseract-ImageProcess/package.json
@@ -19,6 +19,7 @@
     "logger": "^0.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "tesseract.js": "^5.0.3"
   }
 }
