--- a/geo-service/Dockerfile
+++ b/geo-service/Dockerfile
@@ -1,7 +1,11 @@
-FROM python:3.9-slim-buster
+FROM python:3.11
 WORKDIR /app
 COPY . /app
+RUN apt-get update && apt-get install -y \
+    libgdal-dev \
+    && rm -rf /var/lib/apt/lists/*
+ENV GDAL_CONFIG=/usr/bin/gdal-config
+ENV GDAL_VERSION=3.7.3
 RUN python3 -m pip install --upgrade pip
-RUN pip install -r requirements.txt
-EXPOSE 3000
+RUN python3 -m pip install -r requirements.txt
 CMD python ./app.py
