--- a/Receipts/package.json
+++ b/Receipts/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "FormData": "^0.10.1",
     "mongodb": "^6.2.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "xhr2": "^0.2.1"
   }
